[package]
name = "bevy_puffin"
version = "0.4.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
description = "Integration layer between Bevy, puffin and tracing"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/mvlabat/bevy_puffin"
exclude = [".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["trace"] }
puffin = "0.14"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-log = "0.1"
tracing-error = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
bevy = "0.10"
bevy_egui = "0.20"
puffin_egui = "0.20"
